# oedokumaci-testing

./: .copier-answers.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  duties.py  mkdocs.yml  pyproject.toml  zensical.toml
.claude/skills/jupyter-to-marimo/: SKILL.md
.claude/skills/marimo-notebook/: SKILL.md
.claude/skills/release/: SKILL.md
.github/ISSUE_TEMPLATE/: 1-bug.md  2-feature.md  3-docs.md  4-change.md  config.yml
.github/workflows/: ci.yml
config/: pytest.ini  ruff.toml
config/vscode/: launch.json  tasks.json
docs/.overrides/partials/: comments.html
docs/reference/: api.md
notebooks/: README.md  starter.py
scripts/: gen_credits.py  make.py
src/oedokumaci_testing/: __init__.py  __main__.py
src/oedokumaci_testing/_internal/: cli.py  debug.py  logging.py  path.py
tests/: __init__.py  test_cli.py  test_main.py
