[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oedokumaci-testing"
description = "Testing this great template"
authors = [{name = "Oral Ersoy Dokumaci", email = "oral.ersoy.dokumaci@gmail.com"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = "==3.13.*"
keywords = []
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "loguru>=0.7",
]

[project.urls]
Homepage = "https://oedokumaci.github.io/oedokumaci-testing"
Documentation = "https://oedokumaci.github.io/oedokumaci-testing"
Changelog = "https://oedokumaci.github.io/oedokumaci-testing/changelog"
Repository = "https://github.com/oedokumaci/oedokumaci-testing"
Issues = "https://github.com/oedokumaci/oedokumaci-testing/issues"
Discussions = "https://github.com/oedokumaci/oedokumaci-testing/discussions"

[tool.hatch.version]
path = "src/oedokumaci_testing/__init__.py"

[dependency-groups]
test = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
]
docs = [
    "ghp-import>=2.1",
    "markdown-exec>=1.8",
    "mkdocstrings[python]>=0.29",
    "zensical>=0.0.21",
]
notebooks = [
    "marimo[recommended]>=0.18",
]

[tool.uv]
default-groups = ["test", "docs", "notebooks"]

# ==============================
# taskipy - Task Runner
# ==============================
# Run tasks with: uvx --from taskipy task <task-name>
# List tasks with: uvx --from taskipy task --list

[tool.taskipy.settings]
use_vars = true

[tool.taskipy.variables]
src = "src"
tests = "tests"
all = "src tests"
module = "oedokumaci_testing"

[tool.taskipy.tasks]
# Module runner
run = { cmd = "uv run python -m {module}", help = "Run module entrypoint" }

# Setup
setup = { cmd = "uv sync", help = "Install dependencies" }

# Always write changes
format = { cmd = "uvx ruff format --config=config/ruff.toml {all}", help = "Format code (writes changes)" }
lint = { cmd = "uvx ruff check --config=config/ruff.toml --fix {all}", help = "Lint and auto-fix (writes changes)" }

# Convenience: run both
fix = { cmd = "task format && task lint", help = "Format + lint auto-fix" }

# Quality checks (read-only, for CI)
format_check = { cmd = "uvx ruff format --config=config/ruff.toml --check {all}", help = "Check code formatting (CI)" }
lint_check = { cmd = "uvx ruff check --config=config/ruff.toml {all}", help = "Check linting (CI)" }
typecheck = { cmd = "uvx ty check --config-file=config/ty.toml {src}", help = "Run type checking" }
test = { cmd = "uv run pytest -c config/pytest.ini {tests} --cov={src} --cov-report=html --cov-report=term", help = "Run tests with coverage" }
test_no_cov = { cmd = "uv run pytest -c config/pytest.ini {tests}", help = "Run test suite" }

# CI: all checks in one command (read-only)
ci = { cmd = "task format_check && task lint_check && task typecheck && task test", help = "Run all CI checks (format, lint, typecheck, test)" }

# Documentation
docs = { cmd = "uv run zensical serve", help = "Serve documentation locally" }
docs_build = { cmd = "uv run zensical build --clean --strict", help = "Build documentation (strict)" }

# Release
changelog = { cmd = "uvx --with 'packaging<26' git-changelog --bump auto && echo '\nRemember to update __version__ in src/oedokumaci_testing/__init__.py'", help = "Update changelog" }
release = { cmd = "bash -c 'VERSION=$1; if [ -z \"$VERSION\" ]; then echo \"Usage: task release -- X.Y.Z\" && exit 1; fi; if [ -n \"$(git status --porcelain)\" ]; then echo \"Error: Working directory not clean\" && exit 1; fi; git tag v$VERSION && git push origin v$VERSION && gh release create v$VERSION --generate-notes' _", help = "Create a release (usage: task release -- X.Y.Z)" }

# Utilities
pre_commit = { cmd = "uvx pre-commit run --all-files", help = "Run all pre-commit hooks" }
clean = { cmd = "rm -rf build dist htmlcov site .coverage* .pytest_cache .ruff_cache __pycache__ .venvs .venv", help = "Delete build artifacts and caches" }

# Profiling (using module variable)
profile = { cmd = "uvx scalene -m {module}", help = "Profile module with Scalene (CPU, memory, GPU)" }
profile_memory = { cmd = "uvx memray run -m {module} -o memray-output.bin", help = "Profile module memory with Memray" }
profile_memory_report = { cmd = "uvx memray flamegraph memray-output.bin -o memray-flamegraph.html", help = "Generate Memray flamegraph report" }
